cin verification with opencv.js and tesseract.js+submenus in client area+ virements dashs

--- a/src/app/client/dashboard/informations/informations.component.html
+++ b/src/app/client/dashboard/informations/informations.component.html
@@ -14,35 +14,47 @@
                         <option value="MADAME">{{ 'dash.informations.option2' | translate }}</option>
                     </select>
                 </div>
-                <div *ngIf="informationForm.get('genre')?.invalid && (informationForm.get('genre')?.dirty || informationForm.get('genre')?.touched)" class="text-danger">
-                    <div *ngIf="informationForm.get('genre')?.hasError('required')" style="margin-top: 3px;">{{ 'dash.informations.genderAlert' | translate }}</div>
-                  </div>
+                <div *ngIf="informationForm.get('genre')?.invalid && (informationForm.get('genre')?.dirty || informationForm.get('genre')?.touched)"
+                    class="text-danger">
+                    <div *ngIf="informationForm.get('genre')?.hasError('required')" style="margin-top: 3px;">{{
+                        'dash.informations.genderAlert' | translate }}</div>
+                </div>
             </div>
             <div class="col-md-6">
-                <label for="firstName" class="form-label">{{ 'dash.informations.firstName' | translate }}</label><span class="required">*</span>                
+                <label for="firstName" class="form-label">{{ 'dash.informations.firstName' | translate }}</label><span
+                    class="required">*</span>
                 <div class="input-group">
                     <span class="input-group-text"><i class="fas fa-user"></i></span>
-                    <input type="text" class="form-control" id="firstName" formControlName="firstName" required pattern="[a-zA-ZÀ-ÿ\s\-']{2,}">
+                    <input type="text" class="form-control" id="firstName" formControlName="firstName" required
+                        pattern="[a-zA-ZÀ-ÿ\s\-']{2,}">
                 </div>
-                <div *ngIf="informationForm.get('firstName')?.invalid && (informationForm.get('firstName')?.dirty || informationForm.get('firstName')?.touched)" class="text-danger">
-                    <div *ngIf="informationForm.get('firstName')?.hasError('required')" style="margin-top: 3px;">{{ 'dash.informations.firstNameAlert' | translate }}</div>
-                    <div *ngIf="informationForm.get('firstName')?.hasError('pattern')" style="margin-top: 3px;">{{ 'dash.informations.firstNameAlert2' | translate }}</div>
+                <div *ngIf="informationForm.get('firstName')?.invalid && (informationForm.get('firstName')?.dirty || informationForm.get('firstName')?.touched)"
+                    class="text-danger">
+                    <div *ngIf="informationForm.get('firstName')?.hasError('required')" style="margin-top: 3px;">{{
+                        'dash.informations.firstNameAlert' | translate }}</div>
+                    <div *ngIf="informationForm.get('firstName')?.hasError('pattern')" style="margin-top: 3px;">{{
+                        'dash.informations.firstNameAlert2' | translate }}</div>
                 </div>
             </div>
             <div class="col-md-6">
-                <label for="lastName" class="form-label">{{ 'dash.informations.lastName' | translate }}</label><span class="required">*</span>
+                <label for="lastName" class="form-label">{{ 'dash.informations.lastName' | translate }}</label><span
+                    class="required">*</span>
                 <div class="input-group">
-                    <span class="input-group-text"><i class="bi bi-person"></i></span> <!-- Replaced the icon class with Bootstrap's person icon -->
-                    <input type="text" class="form-control" id="lastName" formControlName="lastName" required pattern="[a-zA-ZÀ-ÿ\s\-']{2,}">
+                    <span class="input-group-text"><i class="bi bi-person"></i></span>
+                    <input type="text" class="form-control" id="lastName" formControlName="lastName" required
+                        pattern="[a-zA-ZÀ-ÿ\s\-']{2,}">
                 </div>
-                       <div *ngIf="informationForm.get('lastName')?.invalid && (informationForm.get('lastName')?.dirty || informationForm.get('lastName')?.touched)" class="text-danger">
-                        <div *ngIf="informationForm.get('lastName')?.hasError('required')" class="text-danger">{{ 'dash.informations.lastNameAlert' | translate }}</div>
-                        <div *ngIf="informationForm.get('lastName')?.hasError('hasNumbers')" class="text-danger">{{ 'dash.informations.lastNameAlert2' | translate }}</div>                        
-                    </div>
+                <div *ngIf="informationForm.get('lastName')?.invalid && (informationForm.get('lastName')?.dirty || informationForm.get('lastName')?.touched)"
+                    class="text-danger">
+                    <div *ngIf="informationForm.get('lastName')?.hasError('required')" class="text-danger">{{
+                        'dash.informations.lastNameAlert' | translate }}</div>
+                    <div *ngIf="informationForm.get('lastName')?.hasError('hasNumbers')" class="text-danger">{{
+                        'dash.informations.lastNameAlert2' | translate }}</div>
+                </div>
             </div>
             <div class="mb-3">
                 <label for="photo" class="form-label">{{ 'dash.informations.photo' | translate }}</label>
-                <input type="file" name="photo" class="form-control"id="photo" formControlName="photo">
+                <input type="file" name="photo" class="form-control" id="photo" formControlName="photo">
             </div>
             <div class="col-md-6">
                 <label for="email" class="form-label">{{ 'dash.informations.email' | translate }}</label>
@@ -50,33 +62,37 @@
                     <span class="input-group-text"><i class="fas fa-envelope"></i></span>
                     <input type="email" class="form-control" id="email" formControlName="email" required>
                 </div>
-                <div *ngIf="informationForm.get('email')?.invalid && (informationForm.get('email')?.dirty || informationForm.get('email')?.touched)" class="text-danger">
-                    <div *ngIf="informationForm.get('email')?.hasError('required')">{{ 'dash.informations.emailAlert' | translate }}</div>
-                    <div *ngIf="informationForm.get('email')?.hasError('email')">{{ 'dash.informations.emailAlert2' | translate }}</div>
+                <div *ngIf="informationForm.get('email')?.invalid && (informationForm.get('email')?.dirty || informationForm.get('email')?.touched)"
+                    class="text-danger">
+                    <div *ngIf="informationForm.get('email')?.hasError('required')">{{ 'dash.informations.emailAlert' |
+                        translate }}</div>
+                    <div *ngIf="informationForm.get('email')?.hasError('email')">{{ 'dash.informations.emailAlert2' |
+                        translate }}</div>
 
                 </div>
             </div>
             <div class="col-md-6 telStyle">
-                <label for="phoneNumber" name="phoneNumber" id="phoneNumber" class="form-label">{{ 'dash.informations.phone' | translate }}</label><span class="required">*</span>
+                <label for="phoneNumber" name="phoneNumber" id="phoneNumber" class="form-label">{{
+                    'dash.informations.phone' | translate }}</label><span class="required">*</span>
                 <!-- Add the ngx-intl-tel-input component here -->
-                <ngx-intl-tel-input formControlName="phoneNumber"  class="form-control border-control"
-                    [preferredCountries]="['tn']"
-                    [enablePlaceholder]="true"
-                    [cssClass]="'form-control'"
-                    [searchCountryFlag]="true"
-                    [selectedCountryISO]="selectedCountryISO"
-                    [searchCountryPlaceholder]="'Recherchez un pays'"
-                    >
+                <ngx-intl-tel-input formControlName="phoneNumber" class="form-control border-control"
+                    [preferredCountries]="['tn']" [enablePlaceholder]="true" [cssClass]="'form-control'"
+                    [searchCountryFlag]="true" [selectedCountryISO]="selectedCountryISO"
+                    [searchCountryPlaceholder]="'Recherchez un pays'">
                 </ngx-intl-tel-input>
-                <div *ngIf="informationForm.get('phoneNumber')?.invalid && (informationForm.get('phoneNumber')?.dirty || informationForm.get('phoneNumber')?.touched)" class="text-danger">
-                    <div *ngIf="informationForm.get('phoneNumber')?.hasError('required')" style="margin-top: 3px;">{{ 'dash.informations.phoneAlert' | translate }}</div>
-                  </div>
+                <div *ngIf="informationForm.get('phoneNumber')?.invalid && (informationForm.get('phoneNumber')?.dirty || informationForm.get('phoneNumber')?.touched)"
+                    class="text-danger">
+                    <div *ngIf="informationForm.get('phoneNumber')?.hasError('required')" style="margin-top: 3px;">{{
+                        'dash.informations.phoneAlert' | translate }}</div>
+                </div>
             </div>
             <div class="col-md-6">
-                <label for="dateOfBirth" class="form-label">{{ 'dash.informations.bDay' | translate }}</label><span class="required">*</span>
+                <label for="dateOfBirth" class="form-label">{{ 'dash.informations.bDay' | translate }}</label><span
+                    class="required">*</span>
                 <div class="row">
                     <div class="col-4">
-                        <input type="date" id="dateOfBirth" name="dateOfBirth" formControlName="dateOfBirth"  class="form-control">
+                        <input type="date" id="dateOfBirth" name="dateOfBirth" formControlName="dateOfBirth"
+                            class="form-control">
                     </div>
                 </div>
             </div>
@@ -84,11 +100,12 @@
                 <div class="row">
                     <div class="col text-start">
 
-                        <button class="btn btn-secondary butn" (click)="Retour()">{{ 'dash.backButton' | translate }}</button>
+                        <button class="btn btn-secondary butn" (click)="Retour()">{{ 'dash.backButton' | translate
+                            }}</button>
                     </div>
                     <div class="col text-end">
-                            <button class="btn btn-secondary butn" (click)="Suivant('informations-entreprise')" [disabled]="!isFormValid()">{{ 'dash.nextButton' | translate }}</button>
-                        
+                        <button class="btn btn-secondary butn" (click)="Suivant('adresse')"
+                            [disabled]="!isFormValid()">{{ 'dash.nextButton' | translate }}</button>
                     </div>
                 </div>
             </div>
