--- a/src/app/client/transactionsDashboard/reclamation/reclamation.component.html
+++ b/src/app/client/transactionsDashboard/reclamation/reclamation.component.html
@@ -1,1 +1,52 @@
-<p>reclamation works!</p>
+ 
+<body class="g-sidenav-show bg-gray-100">  
+    <div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gray-100" id="sidenav-main">
+        <div class="sidenav-header">
+            <a class="navbar-brand m-0" href="javascript:;">
+                         
+                <span class="ms-1 font-weight-bold"><img  id="logo" src="../../../assets/img/logos/logo.png"> </span>
+            </a>
+        </div>
+        <hr class="horizontal dark mt-0">
+        <app-transaction-nav></app-transaction-nav>
+    </div>
+        <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
+            <app-navbar></app-navbar>
+            <div class="container-fluid py-4">
+                <div class="row">
+                <div class="col-12">
+                <div class="card mb-4">
+                    <div class="card-header pb-0" >
+                        <h4>Historique des demandes </h4>
+                        <div class="float-right">
+                            <button  type="submit" class="btn btn-secondary butn">
+                                <i class="fas fa-user-plus"></i>
+                                Nouvelle demande
+                            </button>                           
+                        </div>
+                    </div>
+                    
+                <div class="card-body px-0 pt-0 pb-2">
+                <div class="table-responsive p-0">
+                <table class="table align-items-center mb-0">
+                <thead>
+                <tr>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Référence</th>
+                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Date de la réclamation	 </th>
+                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Objet</th>
+                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Commentaire</th>
+                </tr>
+                </thead>
+                <tbody>
+               
+
+                </tbody>
+                </table>
+                </div>
+                </div>
+                </div>
+                </div>
+                </div>             
+                </div>         
+        </main>   
+</body>
