--- a/src/app/client/dashboard/autres-informations/autres-informations.component.html
+++ b/src/app/client/dashboard/autres-informations/autres-informations.component.html
@@ -6,12 +6,15 @@
     <div class="card-body">
         <form [formGroup]="infoForm" class="row g-3" (ngSubmit)="saveAdditionalInfo(infoForm)">
             <div class="col-12">
-                <label for="typeIndividual">{{ 'dash.additionalInfo.type_individual' | translate }}</label><span class="required">*</span>
+                <label for="typeIndividual">{{ 'dash.additionalInfo.type_individual' | translate }}</label><span
+                    class="required">*</span>
 
                 <div class="input-group">
                     <span class="input-group-text"><i class="bi bi-briefcase-fill"></i></span>
-                    <select id="typeIndividual" name="typeIndividual" formControlName="typeIndividual" class="form-select">
-                        <option value="" disabled selected>{{ 'dash.additionalInfo.select_individual_type' | translate }}</option>
+                    <select id="typeIndividual" name="typeIndividual" formControlName="typeIndividual"
+                        class="form-select">
+                        <option value="" disabled selected>{{ 'dash.additionalInfo.select_individual_type' | translate
+                            }}</option>
                         <option value="SECTEUR_PRIVE">{{ 'dash.additionalInfo.private_sector' | translate }}</option>
                         <option value="SECTEUR_ETATIQUE">{{ 'dash.additionalInfo.state_sector' | translate }}</option>
                     </select>
@@ -19,75 +22,103 @@
             </div>
 
             <div class="col-4">
-                <label for="profession">{{ 'dash.additionalInfo.profession' | translate }}</label><span class="required">*</span>
+                <label for="profession">{{ 'dash.additionalInfo.profession' | translate }}</label><span
+                    class="required">*</span>
                 <div class="input-group">
                     <span class="input-group-text"><i class="bi bi-person-badge-fill"></i></span>
-                    <input type="text" id="profession" name="profession" formControlName="profession" required pattern="[a-zA-ZÀ-ÿ\s\-']{2,}" class="form-control">
-                </div> 
-                <div *ngIf="infoForm.get('profession')?.invalid && (infoForm.get('profession')?.dirty || infoForm.get('profession')?.touched)" class="text-danger">
-                    <div *ngIf="infoForm.get('profession')?.hasError('required')" style="margin-top: 3px;">{{ 'dash.additionalInfo.enter_valid_profession' | translate }}</div>
-                    <div *ngIf="infoForm.get('profession')?.hasError('pattern')" style="margin-top: 3px;">{{ 'dash.additionalInfo.profession_cannot_contain_numbers' | translate }}</div>
+                    <input type="text" id="profession" name="profession" formControlName="profession" required
+                        pattern="[a-zA-ZÀ-ÿ\s\-']{2,}" class="form-control">
+                </div>
+                <div *ngIf="infoForm.get('profession')?.invalid && (infoForm.get('profession')?.dirty || infoForm.get('profession')?.touched)"
+                    class="text-danger">
+                    <div *ngIf="infoForm.get('profession')?.hasError('required')" style="margin-top: 3px;">{{
+                        'dash.additionalInfo.enter_valid_profession' | translate }}</div>
+                    <div *ngIf="infoForm.get('profession')?.hasError('pattern')" style="margin-top: 3px;">{{
+                        'dash.additionalInfo.profession_cannot_contain_numbers' | translate }}</div>
                 </div>
             </div>
-            
+
             <div class="col-4">
-                <label for="pieceType">{{ 'dash.additionalInfo.piece_type' | translate }}</label><span class="required">*</span>               
+                <label for="pieceType">{{ 'dash.additionalInfo.piece_type' | translate }}</label><span
+                    class="required">*</span>
                 <div class="input-group">
                     <span class="input-group-text"><i class="bi bi-card-list"></i></span>
-                    <select id="type_particulier" name="type_particulier" formControlName="pieceType" class="form-select">
-                        <option value="" disabled selected>{{ 'dash.additionalInfo.select_piece_type' | translate }}</option>
+                    <select id="type_particulier" name="type_particulier" formControlName="pieceType"
+                        class="form-select">
+                        <option value="" disabled selected>{{ 'dash.additionalInfo.select_piece_type' | translate }}
+                        </option>
                         <option value="CIN">{{ 'dash.additionalInfo.national_identity_card' | translate }}</option>
                         <option value="PASSPORT">{{ 'dash.additionalInfo.passport' | translate }}</option>
-                  </select>  
-                </div>   
+                    </select>
+                </div>
             </div>
-            
+
             <div class="col-4">
-                <label for="pieceNumber">{{ 'dash.additionalInfo.piece_number' | translate }}</label><span class="required">*</span>
+                <label for="pieceNumber">{{ 'dash.additionalInfo.piece_number' | translate }}</label><span
+                    class="required">*</span>
                 <div class="input-group">
                     <span class="input-group-text"><i class="bi bi-file-text"></i></span>
-                    <input type="text" id="pieceNumber" name="pieceNumber" formControlName="pieceNumber" required  pattern="[0-9]*" class="form-control" >
-                </div>                
-                <div *ngIf="infoForm.get('pieceNumber')?.invalid && (infoForm.get('pieceNumber')?.dirty || infoForm.get('pieceNumber')?.touched)" class="text-danger">
-                    <div *ngIf="infoForm.get('pieceNumber')?.hasError('required')" style="margin-top: 3px;">{{ 'dash.additionalInfo.enter_valid_number' | translate }}</div>
-                    <div *ngIf="infoForm.get('pieceNumber')?.hasError('pattern')" style="margin-top: 3px;">{{ 'dash.additionalInfo.piece_number_should_contain_only_numbers' | translate }}</div>
+                    <input type="text" id="pieceNumber" name="pieceNumber" formControlName="pieceNumber" required
+                        pattern="[0-9]*" class="form-control">
+                </div>
+                <div *ngIf="infoForm.get('pieceNumber')?.invalid && (infoForm.get('pieceNumber')?.dirty || infoForm.get('pieceNumber')?.touched)"
+                    class="text-danger">
+                    <div *ngIf="infoForm.get('pieceNumber')?.hasError('required')" style="margin-top: 3px;">{{
+                        'dash.additionalInfo.enter_valid_number' | translate }}</div>
+                    <div *ngIf="infoForm.get('pieceNumber')?.hasError('pattern')" style="margin-top: 3px;">{{
+                        'dash.additionalInfo.piece_number_should_contain_only_numbers' | translate }}</div>
                 </div>
             </div>
-            
+
             <div class="col-12">
-                <label for="expirationDate">{{ 'dash.additionalInfo.expiration_date' | translate }}</label><span class="required">*</span>
-                <input type="date" id="expirationDate" name="expirationDate" formControlName="expirationDate" min="{{ today | date:'yyyy-MM-dd' }}">
+                <label for="expirationDate">{{ 'dash.additionalInfo.expiration_date' | translate }}</label><span
+                    class="required">*</span>
+                <input type="date" id="expirationDate" name="expirationDate" formControlName="expirationDate"
+                    min="{{ today | date:'yyyy-MM-dd' }}">
             </div>
-            
+
             <div class="col-12">
-                <label for="piecePhoto">{{ 'dash.additionalInfo.piece_photo' | translate }}</label><span class="required">*</span>
-                <input type="file" id="piecePhoto" name="piecePhoto" formControlName="piecePhoto" accept="png,.jpg, .jpeg,  .pdf" class="form-control">
-                <div *ngIf="infoForm.get('piecePhoto')?.invalid && (infoForm.get('piecePhoto')?.dirty || infoForm.get('piecePhoto')?.touched)" class="text-danger">
-                    <div *ngIf="infoForm.get('piecePhoto')?.hasError('required')" style="margin-top: 3px;">{{ 'dash.additionalInfo.valid_extensions_are' | translate }}</div>
+                <label for="piecePhoto">{{ 'dash.additionalInfo.piece_photo' | translate }}</label><span
+                    class="required">*</span>
+                <input type="file" id="piecePhoto" name="piecePhoto" formControlName="piecePhoto" (change)="onFileChange($event)"
+                    accept="png,.jpg, .jpeg,  .pdf" class="form-control">
+                <div *ngIf="infoForm.get('piecePhoto')?.invalid && (infoForm.get('piecePhoto')?.dirty || infoForm.get('piecePhoto')?.touched)"
+                    class="text-danger">
+                    <div *ngIf="infoForm.get('piecePhoto')?.hasError('required')" style="margin-top: 3px;">{{
+                        'dash.additionalInfo.valid_extensions_are' | translate }}</div>
+                </div>
+                <div *ngIf="verificationResult !== null">
+                    <p>{{ verificationResult ? 'La CIN est valide' : 'La CIN est invalide' }}</p>
                 </div>
             </div>
-            
+
             <div class="col-12">
                 <label for="referralCode">{{ 'dash.additionalInfo.referral_code' | translate }}</label>
                 <div class="input-group">
                     <span class="input-group-text"><i class="bi bi-shield-lock-fill"></i></span>
-                    <input type="text" id="referralCode" name="referralCode" formControlName="referralCode"  pattern="[0-9]{4}" placeholder="0123" class="form-control">
+                    <input type="text" id="referralCode" name="referralCode" formControlName="referralCode"
+                        pattern="[0-9]{4}" placeholder="0123" class="form-control">
                 </div>
-                <div *ngIf="infoForm.get('referralCode')?.invalid && (infoForm.get('numero_piece')?.dirty || infoForm.get('referralCode')?.touched)" class="text-danger">
-                    <div *ngIf="infoForm.get('referralCode')?.hasError('pattern')" style="margin-top: 3px;">{{ 'dash.additionalInfo.code_should_contain_four_digits' | translate }}</div>
+                <div *ngIf="infoForm.get('referralCode')?.invalid && (infoForm.get('numero_piece')?.dirty || infoForm.get('referralCode')?.touched)"
+                    class="text-danger">
+                    <div *ngIf="infoForm.get('referralCode')?.hasError('pattern')" style="margin-top: 3px;">{{
+                        'dash.additionalInfo.code_should_contain_four_digits' | translate }}</div>
                 </div>
             </div>
 
             <div class="col-12">
                 <div class="row">
                     <div class="col text-start">
-                        <button class="btn btn-secondary butn" (click)="Retour('autres-informations')">{{ 'dash.backButton' | translate }}</button>
+                        <button class="btn btn-secondary butn" (click)="Retour('adresse')">{{
+                            'dash.backButton' | translate }}</button>
                     </div>
                     <div class="col text-end">
-                        <button class="btn btn-secondary butn" (click)="Suivant('offres-et-domicialisation')" >{{ 'dash.nextButton' | translate }}</button>
+                        <button class="btn btn-secondary butn" (click)="Suivant('offres-et-domiciliation')">{{
+                            'dash.nextButton' | translate }}</button>
                     </div>
                 </div>
             </div>
         </form>
     </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
