--- a/src/app/client/transactionsDashboard/create-bank-account/create-bank-account.component.css
+++ b/src/app/client/transactionsDashboard/create-bank-account/create-bank-account.component.css
@@ -1,4 +1,4 @@
-.side{
+.side {
     overflow-x: hidden !important;
     overflow-y: hidden !important;
 }
@@ -16,26 +16,23 @@
     margin: 40px;
 }
 
-.search-input{
+.search-input {
     margin: 30px 0 0 40px !important;
     width: 80% !important;
 }
 
-.icon{
+.icon {
     margin-top: 30px !important;
     margin-left: -10pc !important;
 }
-  
 
-.form-control-mvmt{
+.form-control-mvmt {
     border-radius: 10px !important;
     width: 80% !important;
 
 }
 
-
 ::ng-deep .bg-gradient-primary {
-    background-image: linear-gradient(310deg, #cca558, #8f7134) !important; /* Override with ng-deep */
+    background-image: linear-gradient(310deg, #cca558, #8f7134) !important;
+    /* Override with ng-deep */
 }
-
-
