--- a/src/app/client/transactionsDashboard/create-bank-account/create-bank-account.component.html
+++ b/src/app/client/transactionsDashboard/create-bank-account/create-bank-account.component.html
@@ -1,56 +1,53 @@
-<body class="g-sidenav-show bg-gray-100">  
-    <div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gray-100 side" id="sidenav-main" >
+<body class="g-sidenav-show bg-gray-100">
+    <div class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gray-100 side"
+        id="sidenav-main">
         <div class="sidenav-header">
             <a class="navbar-brand m-0" href="javascript:;">
-                         
-                <span class="ms-1 font-weight-bold"><img  id="logo" src="../../../assets/img/logos/logo.png"> </span>
+
+                <span class="ms-1 font-weight-bold"><img id="logo" src="../../../assets/img/logos/logo.png"> </span>
             </a>
         </div>
         <hr class="horizontal dark mt-0">
         <app-transaction-nav></app-transaction-nav>
-        </div>
-        <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
-            <app-navbar></app-navbar>
-            <div class="d-flex align-items-center" style="width: 100%;">
-                <!-- Search Input -->
-                <div class="flex-grow-1 p-0 search-input">
-                  <input type="text" 
-                         class="form-control-mvmt search-box search-form"
-                         placeholder="Search by Account"
-                         style="width: 100%; background-color: #ffffff;"
-                         ng-change="filtreAccount()"
-                         ng-model="searchaccount">
-                </div>
-              
-                <!-- Icon -->
-                <div class="ms-3"> <!-- Add some margin to separate -->
-                  <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+    </div>
+    <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
+        <app-navbar></app-navbar>
+        <div class="d-flex align-items-center" style="width: 100%;">
+            <!-- Search Input -->
+            <div class="flex-grow-1 p-0 search-input">
+                <input type="text" class="form-control-mvmt search-box search-form" placeholder="Search by Account"
+                    style="width: 100%; background-color: #ffffff;" ng-change="filtreAccount()"
+                    ng-model="searchaccount">
+            </div>
+            <!-- Icon -->
+            <div class="ms-3"> <!-- Add some margin to separate -->
+                <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
                     <i class="fa fa-plus text-lg opacity-10" aria-hidden="true"></i>
-                  </div>
                 </div>
-              </div>
-               
-            <div class="card-body p-3" style="max-width: 540px;">
-                <div class="row no-gutters">
-                    <div class="col-md-6">
-                        <div class="card-body">
-                            <p class="mb-1 pt-2 text-bold">Compte Epargne</p>
-                            <h5 class="font-weight-bolder">Mme BAHROUN Cheyma</h5>
-                            <p><strong>Account number:</strong> {{qrData}}</p>
-                            <p><strong>Account balance:</strong> 0 XAF</p>
-                            <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
-                                Deposit
-                                <i class="fas fa-arrow-right text-sm ms-1" aria-hidden="true"></i>
-                            </a>
-                        </div>
+            </div>
+        </div>
+        <div class="card-body p-3" style="max-width: 540px;">
+            <div class="row no-gutters">
+                <div class="col-md-6">
+                    <div class="card-body">
+                        <p class="mb-1 pt-2 text-bold">{{compteType}}</p>
+                        <h5 class="font-weight-bolder">{{ClientName}}</h5>
+                        <p><strong>N° Compte :</strong> {{qrData}}</p>
+                        <p><strong>Solde Compte :</strong> {{0 }} XAF</p>
+                        <a class="text-body text-sm font-weight-bold mb-0 icon-move-right mt-auto" href="javascript:;">
+                            <i class="fas fa-credit-card" aria-hidden="true" (click)="GoToDepotRetrait()"></i><br>
+                            Déposer
+                        </a>
                     </div>
-                    <div class="col-md-6">
-                        <div class="card-img-right flex-grow-1 bg-transparent" style="background-size: contain; background-repeat: no-repeat; background-position: center center;">
-                            <qrcode [qrdata]="qrData" [width]="256"></qrcode>
-                        </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card-img-right flex-grow-1 bg-transparent"
+                        style="background-size: contain; background-repeat: no-repeat; background-position: center center;">
+                        <qrcode [qrdata]="qrData" [width]="256"></qrcode>
                     </div>
                 </div>
             </div>
-            
-        </main>
-        </body>
+        </div>
+
+    </main>
+</body>
