--- a/src/app/client/transactionsDashboard/default-layout/transaction-nav/transaction-nav.component.css
+++ b/src/app/client/transactionsDashboard/default-layout/transaction-nav/transaction-nav.component.css
@@ -1,73 +1,62 @@
+/* Global override for z-index */
 @import url('https://demos.creative-tim.com/soft-ui-dashboard/assets/css/nucleo-icons.css');
 @import url('https://demos.creative-tim.com/soft-ui-dashboard/assets/css/nucleo-svg.css');
 @import url('https://demos.creative-tim.com/soft-ui-dashboard/assets/css/soft-ui-dashboard.min.css?v=1.0.2');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
 
-.bg-gradient-primary{
-  color: linear-gradient (90deg, #cca558, #8f7134) !important ;
+.bg-gradient-primary {
+  color: linear-gradient (90deg, #cca558, #8f7134) !important;
   background-color: linear-gradient (90deg, #cca558, #8f7134) !important;
   background-image: linear-gradient (310deg, #cca558, #8f7134) !important;
 }
 
-
-/* Global override for z-index */
-::ng-deep #sidenav-main {
-  z-index: 0; 
-}
-
-
 .sidenav {
-    height: 100vh; /* Prendre toute la hauteur de l'écran */
-    overflow-x: hidden !important; 
-    overflow-y: hidden !important; 
+  height: 100vh;
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
 }
 
-.icon-inactive{
-    color: black !important;
+.nav-link {
+  cursor: pointer;
 }
-
-.nav-item {
-    position: relative;
-  }
-
-  .nav-link {
-    cursor: pointer; /* Makes the cursor a pointer on hover */
-  }
-
-  .nav-item {
-    /* Ensure pointer interactions work correctly */
-    &:hover {
-      background-color: rgb(255, 252, 252); /* Example hover effect */
-    }
-  }  
 
 .submenu-list.active {
   max-height: 500px;
 
 }
-  
+
+::ng-deep .navbar-vertical .navbar-nav>.nav-item .nav-link.active .icon {
+  background-image: linear-gradient(310deg, #c2862d, #3c2f1a);
+}
+
+
+::ng-deep #sidenav-main {
+  z-index: 0;
+}
+
+
+.icon-inactive {
+  color: black !important;
+}
+
 .submenu-list {
   list-style-type: none;
-  padding-left: 1em;
   max-height: 0;
+  background-color: transparent;
+  color: #3c2f1a !important;
   overflow: hidden;
-  transition: max-height 0.5s ease-out; /* Add transition for smooth animation */
-}
-  
-  ::ng-deep .navbar-vertical .navbar-nav > .nav-item .nav-link.active .icon {
-    background-image: linear-gradient(310deg, #c2862d, #3c2f1a); /* New gradient */
+  transition: max-height 0.5s ease-out;
+  position: relative;
+  border: none;
+  box-shadow: none;
 }
 
 .expandable-content {
-  transition: max-height 0.3s ease; /* Smooth transition for expansion/collapse */
-  max-height: 0; /* Collapsed state */
-  overflow: hidden; /* Hide overflow when collapsed */
+  transition: max-height 0.3s ease;
+  max-height: 0;
+  overflow: hidden;
 }
 
 .navbar-nav .nav-item[ng-reflect-expanded="true"] .expandable-content {
-  max-height: 200px; /* Set a reasonable max-height when expanded */
+  max-height: 200px;
 }
-
-
-
-
