cin verification with opencv.js and tesseract.js+submenus in client area+ virements dashs

--- a/src/app/client/transactionsDashboard/transfert-rapide/transfert-rapide.component.css
+++ b/src/app/client/transactionsDashboard/transfert-rapide/transfert-rapide.component.css
@@ -2,6 +2,9 @@
   border: 2px solid black;
   border-radius: 5px;
   /* Pour des coins arrondis */
+  border: 2px solid black;
+  border-radius: 5px;
+  /* Pour des coins arrondis */
 
 }
 
