fixing loading main.js

--- a/src/app/client/signup/signup.component.html
+++ b/src/app/client/signup/signup.component.html
@@ -19,13 +19,8 @@
                         </div>
                     </a>
                 </div>
-                <div class="card">
-                    <a href="/organisation" class="card-link">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ 'register.type3' | translate }}</h5>
-                        </div>
-                    </a>
-                </div>
+                <p class="box-text">Compte déjà existant ? <a class="forgot box-text" href="/bfi/login">Connectez-vous!</a></p>
+
             </div>
         </div>
     </div>
