--- a/src/app/client/signup/signup.component.css
+++ b/src/app/client/signup/signup.component.css
@@ -124,4 +124,13 @@ a {
     color: #000; /* Change color on hover */
 }
 
+.box-text{
+    color: white;
+    font-size: small;
+}
+
+.forgot {
+    text-decoration: underline !important;
+}
+
 
